# daily_paper

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml  pages-sync.yml
apps/api/: Dockerfile  alembic.ini
apps/api/alembic/: env.py  script.py.mako
apps/api/alembic/versions/: 20260419_0001_initial.py  20260526_0002_article_translation_analysis.py
apps/api/app/: __init__.py  cli.py  main.py
apps/api/app/adapters/: base.py  cell_press.py  crossref_only.py  factory.py  nature.py  springer.py
apps/api/app/api/: router.py
apps/api/app/core/: logging.py  settings.py
apps/api/app/db/: session.py
apps/api/app/models/: __init__.py  article.py  journal.py  sync.py
apps/api/app/schemas/: article.py  common.py  dashboard.py  health.py  journal.py  sync.py
apps/api/app/services/: article_analysis.py  config.py  content_policy.py  crossref.py  dashboard.py  dedup.py  http.py  metadata_enrichment.py  metadata_refresh.py  normalizer.py  pubmed.py  rss_parser.py  scheduler.py  search.py  seed.py  sync.py  (+2 more)
apps/api/daily_paper_tracker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
apps/api/tests/: conftest.py  test_api.py  test_article_analysis.py  test_content_policy.py  test_dedup.py  test_normalizer.py  test_seed.py  test_text_utils.py
apps/web/: Dockerfile  eslint.config.js  index.html  package.json  tsconfig.app.json  vite.config.ts
apps/web/src/: App.tsx  main.tsx
scripts/: bootstrap.ps1  bootstrap.sh  run_alembic.py
(+33 files in other folders)
